@@ -41,5 +41,6 @@ i3_test_scripts(resources/tests/propagator_state_storage.py
   resources/tests/test_modify_start_time.py
   resources/tests/test_combine_PEs.py
   resources/tests/test_down_sample_mcpe.py
+  resources/tests/test_mcpe_to_mchit_converter.py
   #resources/tests/nugen_full_chain.py
 )
